[gd_scene load_steps=10 format=3 uid="uid://c5iex2qhx53uq"]

[ext_resource type="Script" path="res://Mate.gd" id="1_3h4w5"]
[ext_resource type="Script" path="res://Scripts/MateArea.gd" id="2_c520u"]
[ext_resource type="Texture2D" uid="uid://22wnqgayx5px" path="res://Assets/Sprites/Mate/CharcoMate.png" id="3_xe615"]
[ext_resource type="Texture2D" uid="uid://wkvb5rl1pbe5" path="res://Assets/Sprites/Mate/mate.png" id="4_i3p0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sduwl"]
radius = 127.577

[sub_resource type="Animation" id="Animation_v51qt"]
resource_name = "rotation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MateSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62lab"]
_data = {
"rotation": SubResource("Animation_v51qt")
}

[sub_resource type="GDScript" id="GDScript_wiy0y"]
script/source = "extends Area2D
signal Impacto

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



func impacto():
	$CollisionShape2D.disabled = true
	
	emit_signal(\"Impacto\")

"

[sub_resource type="CircleShape2D" id="CircleShape2D_ahqnj"]
radius = 38.3275

[node name="Mate" type="CharacterBody2D"]
scale = Vector2(0.281943, 0.241601)
script = ExtResource("1_3h4w5")

[node name="Area" type="Area2D" parent="." groups=["proyectilArea"]]
script = ExtResource("2_c520u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area" groups=["proyectilArea"]]
shape = SubResource("CircleShape2D_sduwl")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Area"]
show_behind_parent = true
texture_filter = 1
position = Vector2(-1.77341, -4.13906)
scale = Vector2(5.09855, 5.34628)
texture = ExtResource("3_xe615")

[node name="MateSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 2.29777
scale = Vector2(2.61174, 2.60759)
texture = ExtResource("4_i3p0o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_62lab")
}

[node name="Colision" type="Area2D" parent="." groups=["colision"]]
script = SubResource("GDScript_wiy0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colision" groups=["colision"]]
shape = SubResource("CircleShape2D_ahqnj")

[node name="AreaTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DañoTimer" type="Timer" parent="."]

[node name="tikTimer" type="Timer" parent="."]
wait_time = 0.254

[connection signal="timeout" from="AreaTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DañoTimer" to="." method="_on_daño_timer_timeout"]
[connection signal="timeout" from="tikTimer" to="." method="_on_tik_timer_timeout"]
